kubernetes/data-tier/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lunatic-data
  labels:
    app.kubernetes.io/part-of: lunatic-siem
